2009-06-18	Chris Johns <chrisj@rtems.org>

	* telnetd/des.c: Split the des_f struct into smaller parts so
	targets that cannot address large structs can be supported.
	
2009-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/objectshrinkinformation.c: Fix spelling error.

2009-06-18	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/hexdump-odsyntax.c: H8300 has the same size float
	and double. Fix error in case statement.
	
2009-06-18	Chris Johns <chrisj@rtems.org>

	* score/cpu/mips/rtems/mips/idtcpu.h: Missed another WAIT
	define. Removed.

2009-06-17	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/extern-dd.h: Delcare the conv arrays extern to
	stop PPC link errors.
	* libmisc/shell/main_time.c, libmisc/Makefile.am,
	libmisc/shell/shellconfig.h: Add a time command.
	
	* libmisc/shell/shellconfig.h, 
2009-06-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/rtems/bspIo.h, libcsupport/Makefile.am: Add putk().
	* libcsupport/src/putk.c: New file.

2009-06-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/killinfo.c: Make easier to map coverage data.

2009-06-15	Chris Johns <chrisj@rtems.org>

	* libmisc/shell/hexdump-odsyntax.c: AVR has the same size float
	and double. Fix error in case statement.
	* libmisc/shell/main_dd.c: Remove sys/conf.h header. It is not
	available if networking is disabled.

2009-06-15	Chris Johns <chrisj@rtems.org>

	* score/cpu/mips/rtems/mips/idtcpu.h: Remote WAIT define. Horrible
	overload.
	
2009-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/heapwalk.c: Remove include of stdlib.h since abort was not
	called anymore.

2009-06-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/include/rtems/rtems/region.h,
	rtems/src/rtemsobjectgetclassinfo.c, score/src/heapwalk.c,
	score/src/objectgetnameasstring.c, score/src/objectsetname.c,
	score/src/timespecdivide.c, score/src/ts64divide.c: Remove include of
	stdio.h

2009-06-12	Joel Sherrill <joel.sherrill@oarcorp.com>
